@@ -621,9 +621,19 @@ static bool isSSE2Present()
                 cpuid;
                 mov flags, edx;
             }
+#elif COMPILER(GCC)
+            asm (
+                "movl $0x1, %%eax;"
+                "pushl %%ebx;"
+                "cpuid;"
+                "popl %%ebx;"
+                "movl %%edx, %0;"
+                : "=g" (flags)
+                :
+                : "%eax", "%ecx", "%edx"
+            );
 #else
             flags = 0;
-            // FIXME: Add GCC code to do above asm
 #endif
             present = (flags & SSE2FeatureBit) != 0;
         }
